# atcoder-archives-crawler

./: Cargo.toml
database/: appendUserToRate.fql  clearRateCrawlingFlag.fql  clear_crawling_flag.gql  countColors.fql  countRate.fql  create_rate.gql  faunadb_schema.gql  getLastHeader.fql  register_users.gql  schema.gql
src/: crawl.rs  main.rs  util.rs
src/util/: atcoder.rs  faunadb.rs
