[package]
name = "crawler"
version = "0.1.0"
authors = ["Makutamoto <34860673+makutamoto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
scraper = "0.12.0"
graphql_client = "0.9.0"
serde = "1.0.112"
serde_json = "1.0.55"
lazy_static = "1.4.0"
chrono = "0.4.11"
maplit = "1.0.2"
